--- a/localdeployment/docker-compose.yml
+++ b/localdeployment/docker-compose.yml
@@ -10,3 +10,20 @@ services:
       - POSTGRES_DB=postgres
     ports:
       - '15432:5432'
+  oidc-service:
+    image: jboss/keycloak:12.0.4@sha256:67e0c88e69bd0c7aef972c40bdeb558a974013a28b3668ca790ed63a04d70584
+    volumes:
+      - ./keycloak/realm.json:/tmp/realm.json
+    environment:
+      - DB_VENDOR=postgres
+      - DB_ADDR=dbms-service
+      - DB_PORT=5432
+      - DB_USER=keycloak
+      - DB_PASSWORD=keycloak
+      - DB_DATABASE=keycloak
+      - KEYCLOAK_HTTP_PORT=8080
+      - KEYCLOAK_USER=keycloak
+      - KEYCLOAK_PASSWORD=keycloak
+      - KEYCLOAK_IMPORT=/tmp/realm.json
+    ports:
+      - '8090:8080'
