--- a/color/src/main/resources/application.yml
+++ b/color/src/main/resources/application.yml
@@ -2,6 +2,10 @@
   quarkus:
     http:
       port: 8081
+amqp-host: ${AMQP_HOST:localhost}
+amqp-port: ${AMQP_PORT:5672}
+amqp-username: ${AMQP_USERNAME:quarkus}
+amqp-password: ${AMQP_PASSWORD:quarkus}
 quarkus:
   datasource:
     db-kind: postgresql
@@ -11,3 +15,10 @@ quarkus:
       url: jdbc:postgresql://${DB_HOST:localhost:15432}/${DB_DATABASE:app_color}
       max-size: 8
       min-size: 2
+mp:
+  messaging:
+    incoming:
+      jms-new-color-channel:
+        connector: smallrye-amqp
+        durable: true
+        use-anonymous-sender: false
