Added configuration to user's application.yml

--- a/user/src/main/resources/application.yml
+++ b/user/src/main/resources/application.yml
@@ -2,6 +2,10 @@ amqp-host: ${AMQP_HOST:localhost}
 amqp-port: ${AMQP_PORT:5672}
 amqp-username: ${AMQP_USERNAME:quarkus}
 amqp-password: ${AMQP_PASSWORD:quarkus}
+kafka:
+  bootstrap:
+    servers:
+      - localhost:9092
 quarkus:
   datasource:
     db-kind: postgresql
@@ -18,3 +22,9 @@ mp:
         connector: smallrye-amqp
         durable: true
         use-anonymous-sender: false
+    incoming:
+      kafka-new-color-created-channel:
+        connector: smallrye-kafka
+        topic: kafka-new-color-created-channel
+        value:
+          deserializer: de.consol.dus.user.boundary.messaging.kafka.incoming.ColorResponseDeserializer
